# call-function--ontological

./: README.md  pyproject.toml  seed.yaml
.github/workflows/: ci.yml  validate.yml
application/: analyzer.py
core/: dasein.py
docs/adr/: 001-initial-architecture.md
tests/: test_four_causes.py  test_ontology.py
